# Differential-drive-obstacle-avoidance

./: README.md
model_description/: CMakeLists.txt  package.xml  world
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/launch/: main_urdf.launch
robot_gazebo/scripts/: avoidance.py
robot_gazebo/worlds/: obstacle.world
